--- a/ScatterPlot/ScatterPlot.ipynb
+++ b/ScatterPlot/ScatterPlot.ipynb
@@ -7,11 +7,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "iris = pd.read_csv(\"Iris.csv\")\n",
-    "\n",
-    "plt.plot(iris.Id, iris[\"SepalLengthCm\"], \"r--\")\n",
-    "plt.show"
+    "iris=pd.read_csv(\"Iris.csv\")\n",
+    "iris.plot(kind='scatter',x='SepalLengthCm',y='SepalWidthCm')"
    ]
   }
  ],
